--- a/cover.css
+++ b/cover.css
@@ -59,13 +59,19 @@ body {
   padding: 10px;
 }
 
-.visu{
+.need-validation{
   text-align: center;
   max-width: fit-content;
   max-height: 100%;
   object-fit: cover;
 }
 
+.visu1{
+  float: left;
+}
+.visu2{
+  float: right;
+}
 
 
 /*
@@ -207,7 +213,7 @@ body {
   .masthead,
   .mastfoot,
   .cover-container {
-    width: 70%;
+    width: 90%;
   }
 }
 
