--- a/cover.css
+++ b/cover.css
@@ -13,7 +13,7 @@ a:hover {
 .btn-default,
 .btn-default:hover,
 .btn-default:focus {
-  color:rgb(46, 46, 77);
+  color:rgb(236, 199, 96);
   text-shadow: none; /* Prevent inheritance from `body` */
   background-color: #fff;
   border: 1px solid #fff;
@@ -27,12 +27,12 @@ a:hover {
 html,
 body {
   height: 100%;
-  background-color:rgb(46, 46, 77);
+  background-color:rgb(236, 199, 96);
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   font-weight: 100;
 }
 body {
-  color: #fff;
+  color: #000;
   font-weight: 100;
   
 }
@@ -66,11 +66,19 @@ body {
   object-fit: cover;
 }
 
+.visu{
+  background-color: rgba(0, 38, 255, 0.5);
+}
+
 .visu1{
   align-self: flex-start;
 }
 .visu2{
   float: inline-end;
+}
+.axis{
+  stroke: white
+
 }
 
 
@@ -81,8 +89,10 @@ body {
 
 .masthead-brand {
   margin-bottom: 10px;
-  font-size: 18px;
+  font-size: 30px;
+  margin-bottom: 0px;
   font-weight: lighter;
+  color: rgb(71, 99, 255);
 }
 
 .masthead-nav > li {
@@ -101,7 +111,7 @@ body {
 }
 .masthead-nav > li > a:hover,
 .masthead-nav > li > a:focus {
-  background-color:rgb(46, 46, 77);
+  background-color:rgb(236, 199, 96);
   border-bottom-color: #a9a9a9;
   border-bottom-color: rgba(255,255,255,.25);
 }
@@ -144,11 +154,11 @@ body {
   border-style: solid;
   border-width: 2px;
   border-radius: 5px;
-  border-color: #a9a9a9;
   margin-left: 5px;
   margin-right: 5px;
-  width: 150px;
-  height: 150px;
+  padding-left: 5px;
+  padding-right: 5px;
+  margin-bottom: 10px;
 }
 .card-deck{
   display: flex;
@@ -173,11 +183,11 @@ body {
   text-align: center;
   margin-left: auto;
   margin-right: auto;
-  color: white;
+  color: rgb(71, 99, 255);
   margin-top: 50px;
   padding-top: 10px;
   border-top-style: solid;
-  border-top-color: rgb(71, 99, 255);
+  border-top-color: white;
   border-bottom-width: 1px;
 }
 
@@ -190,7 +200,7 @@ body {
   /* Pull out the header and footer */
   .masthead {
     position: fixed;
-    background-color:rgb(46, 46, 77);
+    background-color:rgb(236, 199, 96);
     top: 0;
   }
   .mastfoot {
