--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ html, body, figure {
 
 /* Default font and size */
 body {
-	font-family: sans-serif;
+	font-family: fantasy;
 	font-size: 1.1rem;
 }
 
@@ -212,4 +212,3 @@ textarea {
 
 	font-size: 0.8rem;
 }
-
