--- a/cover.css
+++ b/cover.css
@@ -93,10 +93,6 @@ h5,h6 {
 .visu2{
   float: inline-end;
 }
-.axis{
-  stroke: white
-
-}
 
 
 /*
@@ -179,10 +175,12 @@ h5,h6 {
   padding-left: 5px;
   padding-right: 5px;
   margin-bottom: 10px;
+  min-width: 300px;
 }
 .card-deck{
   display: flex;
   align-items: center;
+  align-self: center;
 }
 .card-title{
   border-bottom-style: solid;
