--- a/cover.css
+++ b/cover.css
@@ -188,6 +188,10 @@ h5,h6 {
   display: flex;
   align-items: center;
   align-self: center;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  width: 70%;
 }
 .card-title{
   border-bottom-style: solid;
@@ -202,6 +206,19 @@ h5,h6 {
   text-align: end;
 }
 
+.cover-heading {
+  margin-top: 50px;
+}
+
+.cover-heading-team {
+  margin-top: 50px;
+  padding-top: 50px;
+}
+
+.sous-partie {
+  padding-left:25px;
+  padding-top:15px;
+}
 
 .parties{
   text-align: center;
